--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -78,25 +78,29 @@
         <div class="container">
           <div class="row">
             <div class="col-sm font-weight-bold py-3">16 Oct 2020</div>
+            <div class="col-sm py-3"></div>
             <div class="col-sm py-3">Received</div>
           </div>
           <div class="row">
             <div class="col-sm font-weight-bold py-3">16 Oct 2020</div>
+            <div class="col-sm py-3"></div>
             <div class="col-sm py-3">Sent to: Aintee Hospital<p>16 Oct 2020, 09:12 Provider received referral</p></div>
           </div>
           <div class="row">
             <div class="col-sm font-weight-bold py-3">16 Oct 2020</div>
+            <div class="col-sm py-3"></div>
             <div class="col-sm py-3">Rejected: No X-rays (<a href="#" class="text-info">Rejection letter</a>)</div>
           </div>
           <div class="row">
             <div class="col font-weight-bold py-3">16 Oct 2020</div>
-            <div id="status_1">current status</div>
+            <div class="col-sm py-3">
+              <span id="status_1">current status</span>
+            </div>
             <div class="col py-3">Rejected: No X-rays (<a href="#" class="text-info">Rejection letter</a>)</div>
           </div>
           <div class="d-flex justify-content-end">
             <button>Re-submit forms</button>
           </div>
-
         </div>
 
         <hr>
